package com.materna.candyLord;

public class CandyFind extends Event{

  public CandyFind(){
    super("Candy find", 0);
  }
  @Override
  public void process(Player player) {
    //TODO: implement
  }
}
